# borek

./: .clang-format  .gitignore  .gitmodules  .ignore  Borek.sln  Borek.vcxproj  CMakeLists.txt  PLAN.md  README.md  compile_commands.json  imgui.ini  install.sh
Borek/: Borek.vcxproj  Borek.vcxproj.filters  CMakeLists.txt  imgui.ini
Borek/assets/shaders/: 2DBaseShader.glsl  2DBaseShader.shdr  2DFontShader.glsl
Borek/src/: Borek.h
Borek/src/Borek/: Application.cpp  Application.h  Core.h  EntryPoint.h
Borek/src/Borek/Impl/: Application.cpp  Core.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
Borek/src/Borek/Include/: Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.h  Log.h  Window.h
ECS/: CMakeLists.txt  README.md
ECS/src/ECS/: Archetype.cpp  Archetype.h  ArchetypeExport.h  Component.cpp  Component.h  ComponentColumn.cpp  ComponentColumn.h  DisabledComponent.h  Query.cpp  Query.h  View.h  World.cpp  World.h
MRBCPP/: CMakeLists.txt
MRBCPP/src/: helper_macros.h  mrbcpp.cpp  mrbcpp.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: TestApp.cpp
Stavitel/: CMakeLists.txt
Stavitel/assets/EditorIcons/: Connect.tex  Disconnect.tex  FileBasic.tex  FileConfig.tex  FileImage.tex  FileKey.tex  FileObject.tex  FileScript.tex  FileSound.tex  FileText.tex  FolderBasic.tex  FolderImportant.tex  play.tex  script.sh  stop.tex
Stavitel/assets/EditorIcons/Node/: AnimatedSprite.tex  Area.tex  BoxCollider.tex  Camera.tex  CharacterBody.tex  DynamicBody.tex  Node.tex  Sound.tex  Sprite.tex  StaticBody.tex  Text.tex  Tilemap.tex
Stavitel/assets/Fonts/: MS Gothic.fnt
Stavitel/assets/scenes/: scene.yaml  scene1.yaml  scene2.yaml  test.yaml
Stavitel/src/: EditorSettings.cpp  EditorSettings.h  EditorState.cpp  EditorState.h  Stavitel.cpp
Stavitel/src/Commands/: CommandHandler.cpp  CommandHandler.h  EntityCommands.cpp  EntityCommands.h  ICommand.h
Stavitel/src/Events/: Events.cpp  Events.h  ProjectEvents.cpp  ProjectEvents.h  ResourceEvents.cpp  ResourceEvents.h
Stavitel/src/Layers/: EditorEventHandlerLayer.cpp  EditorEventHandlerLayer.h  EditorInputLayer.cpp  EditorInputLayer.h  EditorLayer.cpp  EditorLayer.h  ProjectLayer.cpp  ProjectLayer.h  ResourceLayer.cpp  ResourceLayer.h
Stavitel/src/Misc/: EditorTextures.cpp  EditorTextures.h  NodeIcons.cpp  NodeIcons.h  SceneTabBar.cpp  SceneTabBar.h  SceneTreeExplorer.cpp  SceneTreeExplorer.h  SearchBar.h
Stavitel/src/Misc/FileExplorer/: FileExplorer.cpp  FileExplorer.h  FileExplorerPopup.cpp  FileExplorerPopup.h
Stavitel/src/Panels/: AnimationPanel.cpp  AnimationPanel.h  AssetsPanel.cpp  AssetsPanel.h  ConsolePanel.cpp  ConsolePanel.h  GizmoPanel.cpp  GizmoPanel.h  Import.cpp  Import.h  KFAnimationPanel.cpp  KFAnimationPanel.h  PanelEvents.cpp  PanelEvents.h  Properties.cpp  Properties.h  ReplPanel.cpp  ReplPanel.h  Scene.cpp  Scene.h  Test.cpp  Test.h  TilesetPanel.cpp  TilesetPanel.h  Toolbar.cpp  Toolbar.h  ToolbarPanel.cpp  ToolbarPanel.h
Stavitel/src/Popups/: AddEntityPopup.cpp  AddEntityPopup.h  AddScriptPopup.cpp  AddScriptPopup.h  AssetPanelPopup.cpp  AssetPanelPopup.h  ChangeNodeTypePopup.cpp  ChangeNodeTypePopup.h  EditorSettingsPopup.cpp  EditorSettingsPopup.h  ExportPopup.cpp  ExportPopup.h  MsgConnectionPopup.cpp  MsgConnectionPopup.h  ProjectSettingsPopup.cpp  ProjectSettingsPopup.h  SpriteSheetFormPopup.cpp  SpriteSheetFormPopup.h  TilemapAssetFormPopup.cpp  TilemapAssetFormPopup.h
Stavitel/src/Tools/: ITool.cpp  ITool.h  IToolbarTool.h  MoveTool.cpp  MoveTool.h
(+405 files in other folders)
